[gd_scene load_steps=9 format=3 uid="uid://dfjo14f3g82v2"]

[ext_resource type="Script" uid="uid://bioru0qhwsirb" path="res://addons/CustomControls/Dialogs/select_emote_dialog.gd" id="1_brrsy"]
[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_jxb4g"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="1_ky8o0"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="3_ibvcc"]
[ext_resource type="Texture2D" uid="uid://4d2mr3tgejjh" path="res://addons/CustomControls/Images/cursor_selection.png" id="4_71bfl"]
[ext_resource type="Texture2D" uid="uid://dwcnj2mbl2v2y" path="res://addons/CustomControls/Images/magnifying_glass.png" id="4_dotrl"]

[sub_resource type="Gradient" id="Gradient_52d4w"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_05l17"]
gradient = SubResource("Gradient_52d4w")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="SelectEmoteDialog" type="Window"]
title = "Select Emote"
position = Vector2i(0, 36)
size = Vector2i(730, 400)
transient = true
exclusive = true
min_size = Vector2i(730, 400)
theme = ExtResource("1_jxb4g")
script = ExtResource("1_brrsy")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_05l17")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Filter:"

[node name="FilterLineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("3_ibvcc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
right_icon = ExtResource("4_dotrl")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_ky8o0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_ky8o0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[node name="Cursor" type="NinePatchRect" parent="."]
unique_name_in_owner = true
offset_left = -100.0
offset_top = -100.0
offset_right = -60.0
offset_bottom = -60.0
texture = ExtResource("4_71bfl")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer2/FilterLineEdit" to="." method="_on_filter_line_edit_gui_input"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/FilterLineEdit" to="." method="_on_filter_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
